<resources>
    <string name="app_name">Aquateka</string>

    <string name="search">Поиск</string>
    <string name="all">Всего: 0</string>
    <string name="active">Активных: 0</string>
    <string name="complete">Завершенных: 0</string>
    <string name="moved">Перенесено: 0</string>
    <string name="next_visit_low">След. визит: </string>
    <string name="period_low">Пер.: 0</string>

    <string name="main">Главная</string>
    <string name="map">Карта</string>
    <string name="client">Клиенты</string>
    <string name="client_profile">Профиль клиента</string>

    <string name="current_month">Текущий месяц</string>
    <string name="all_client">Все клиенты</string>
    <string name="month">Месяц</string>

    <string name="select_action">Выберите действие</string>
    <string name="completed">Выполнено</string>
    <string name="postpone">Перенести</string>

    <string name="delete">Удалить</string>
    <string name="change">Изменить</string>

    <string name="history_visit">История визитов:</string>
    <string name="comment">Коментарий:</string>
    <string name="parts">Запчасти:</string>
    <string name="period">Периодичность:</string>
    <string name="next_visit">Следующий визит:</string>

    <string name="status_completed">выпполен</string>
    <string name="status_move">перенос</string>
    <string name="status_plan">план</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>