<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_orders">

    <fragment
        android:id="@+id/fragment_orders"
        android:name="com.subefu.aquateka.view.fragment.OrdersFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_orders"/>

    <fragment
        android:id="@+id/fragment_map"
        android:name="com.subefu.aquateka.view.fragment.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map"/>

    <fragment
        android:id="@+id/fragment_customers"
        android:name="com.subefu.aquateka.view.fragment.CustomersFragment"
        android:label="@string/client"
        tools:layout="@layout/fragment_customers">
    </fragment>



</navigation>