<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/dialog_back">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_action"
        style="@style/TitleText"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            app:icon="@drawable/ic_postpone"
            android:text="@string/postpone"
            android:layout_weight="1"
            android:layout_marginEnd="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            app:icon="@drawable/ic_completed"
            android:text="@string/completed"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>