<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    tools:context=".view.fragment.MapFragment">

    <TextView
        android:id="@+id/tv_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_bold"
        android:paddingHorizontal="10dp"
        android:text="@string/map"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_month">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_current_month"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_month" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_client" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month" />


        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <TextView
            android:id="@+id/tv_all"
            style="@style/InfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            app:dividerColor="@color/dark_surface"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/tv_active"
            style="@style/InfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active" />
    </LinearLayout>

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="12dp"
        tools:background="@color/dark_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_orders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/map_view"
        tools:listitem="@layout/card_order_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>