<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:theme="@style/Base.Theme.Aquateka"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    tools:context=".view.fragment.VisitsFragment">

    <ImageButton
        android:id="@+id/im_month_previous"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:padding="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/date_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date_container"
        app:srcCompat="@drawable/ic_move"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/date_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/im_month_previous"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="20sp"
            tools:text="МАЯ" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_marginTop="-5dp"
            tools:text="2026" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/im_month_next"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:padding="13dp"
        android:rotation="180"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/date_container"
        app:layout_constraintStart_toEndOf="@+id/date_container"
        app:layout_constraintTop_toTopOf="@+id/date_container"
        app:srcCompat="@drawable/ic_move" />


    <ImageButton
        android:id="@+id/im_export"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/im_import"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/im_import"
        app:srcCompat="@drawable/ic_export" />

    <ImageButton
        android:id="@+id/im_import"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/im_month_next"
        app:layout_constraintEnd_toStartOf="@id/im_export"
        app:layout_constraintTop_toTopOf="@+id/im_month_next"
        app:srcCompat="@drawable/ic_import" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_layout"
        style="@style/SearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_layout">

        <TextView
            android:id="@+id/tv_all"
            style="@style/InfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            app:dividerColor="@color/dark_surface"
            android:layout_marginHorizontal="10dp" />

        <TextView
            android:id="@+id/tv_completed"
            style="@style/InfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/complete" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            app:dividerColor="@color/dark_surface"
            android:layout_marginHorizontal="10dp" />

        <TextView
            android:id="@+id/tv_moved"
            style="@style/InfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/moved" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_orders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="15dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/card_order_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_add"
        app:tint="@color/white"
        android:backgroundTint="@color/dark_surface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>